# communication-stack

./: .gitignore
00-bytes-and-encoding/: CMakeLists.txt  README.md  main.cpp
00-bytes-and-encoding/python/: decode.py
01-upd/: CMakeLists.txt  README.md  sender.cpp
01-upd/experiment/: analyze.py  plot.py  receiver_exp.py  run_sweep.sh  sender_exp.cpp
01-upd/python/: receiver.py
02-tcp/: CMakeLists.txt  client.cpp
02-tcp/cpp/: CMakeLists.txt  client.cpp
02-tcp/experiment/: analyze.py  client_exp.cpp  plot.py  results_d0.csv  results_d10.csv  results_d100.csv  results_d20.csv  results_d5.csv  results_d50.csv  run_sweep.sh  server_exp.py
02-tcp/python/: server.py
benchmarks/: compare_udp_tcp.py
shared/: exp_packet.hpp  telemetry.hpp
